--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -22,6 +22,10 @@ body, html {
   color: white;
 }
 
+h1 {
+  font-size: 50px;
+}
+
 .hero-text button {
   border: none;
   outline: 0;
@@ -181,4 +185,14 @@ button:hover, a:hover {
 
 .footer-description {
   padding: 45px;
+}
+
+@media only screen and (max-width: 768px) {
+ .hero-text {
+   font-size: 20px;
+ }
+
+ .footer {
+   text-align: center;
+ }
 }
